--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF7700" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost."
     />
+      <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Apex Academy 🎓</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
