--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <!-- A little help for the Netlify post-processing bots -->
-    <form name="enquries" netlify netlify-honeypot="bot-field" hidden>
+    <form name="enquries" id="enquries" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="firstName" />
       <input type="text" name="lastName" />
       <input type="email" name="email" />
