--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FF0042" />
+    <meta name="theme-color" content="#4353FF" />
     <meta
       name="description"
       content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost."
