--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="styles.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
