--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost."
     />
       <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
+  <meta name="image" property="og:image"
+    content="%PUBLIC_URL%/linkPreviewImage.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="styles.css">
