--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#4353ff" />
     <meta
       name="description"
+      property="og:description"
       content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost."
     />
       <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
