--- a/public/index.html
+++ b/public/index.html
@@ -46,28 +46,12 @@
     <title>Apex Academy</title>
   </head>
   <body>
-    <input type="hidden" name="contact" value="contact" />
-
-    <form name="contact" method="POST" data-netlify="true" hidden>
-      <p>
-        <label>Your Name: <input type="text" name="name" /></label>
-      </p>
-      <p>
-        <label>Your Email: <input type="email" name="email" /></label>
-      </p>
-      <p>
-        <label>Your Role: <select name="role[]" multiple>
-            <option value="leader">Leader</option>
-            <option value="follower">Follower</option>
-          </select></label>
-      </p>
-      <p>
-        <label>Message: <textarea name="message"></textarea></label>
-      </p>
-      <p>
-        <button type="submit">Send</button>
-      </p>
-    </form>
+<!-- A little help for the Netlify post-processing bots -->
+<form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <textarea name="message"></textarea>
+</form>
 
 <!-- 
         <form  netlify netlify-honeypot="bot-field" hidden name='enquiries' method='POST' data-netlify='true' action='/about' id='enquiries'>
