--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,8 @@
   </head>
   <body>
 <!-- A little help for the Netlify post-processing bots -->
-<form name="contact" netlify netlify-honeypot="bot-field" hidden>
+<form name="contact" method="post" data-netlify="true" netlify netlify-honeypot="bot-field"
+hidden>
   <input type="text" name="firstName" placeholder="First Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
   <input type="text" name="lastName" placeholder="Last Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
   <input type="email" name="email" placeholder="Email address" required />
@@ -65,8 +66,6 @@
   <div class="phone-input-wrapper">
     <input type="tel" placeholder="Mobile Number" name="contactNumber" required pattern="^[789]\d{9}$" title="Enter a valid mobile number" />
   </div>
-
-  <button type="submit">Submit</button>
 
 </form>
 
