--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,7 @@
   <body>
 <!-- A little help for the Netlify post-processing bots -->
 
-<form name="contact" data-netlify="true" netlify netlify-honeypot="bot-field"
-hidden>
+<form name="contact" netlify netlify-honeypot="bot-field" hidden>
   <input type="text" name="firstName" placeholder="First Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
   <input type="text" name="lastName" placeholder="Last Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
   <input type="email" name="email" placeholder="Email address" required />
