--- a/public/index.html
+++ b/public/index.html
@@ -48,26 +48,11 @@
   <body>
 <!-- A little help for the Netlify post-processing bots -->
 
-<form name="contact" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" name="firstName" placeholder="First Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
-  <input type="text" name="lastName" placeholder="Last Name" pattern="^[a-zA-Z\s-]+$" title="Name cannot contain special characters" required />
-  <input type="email" name="email" placeholder="Email address" required />
-  
-  <select name="courseSelection" required>
-    <option value="" disabled>Select your course</option>
-    <option value="FYJC">FYJC</option>
-    <option value="SYJC">SYJC</option>
-    <option value="FYBCOM">FYBCOM</option>
-    <option value="SYBCOM">SYBCOM</option>
-    <option value="TYBCOM">TYBCOM</option>
-    <option value="BMS">BMS</option>
-  </select>
-  
-  <div class="phone-input-wrapper">
-    <input type="tel" placeholder="Mobile Number" name="contactNumber" required pattern="^[789]\d{9}$" title="Enter a valid mobile number" />
-  </div>
-
-</form>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
 
 <!-- 
         <form  netlify netlify-honeypot="bot-field" hidden name='enquiries' method='POST' data-netlify='true' action='/about' id='enquiries'>
