Form-SUbmission-Test

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,17 @@
       <input type="text" name="firstName" />
       <input type="text" name="lastName" />
       <input type="email" name="email" />
-      <textarea name="message"></textarea>
+      <select name="courseSelection">
+        <option value="" disabled selected>Select your course</option>
+        <option value="FYJC">FYJC</option>
+        <option value="SYJC">SYJC</option>
+        <option value="FYBCOM">FYBCOM</option>
+        <option value="SYBCOM">SYBCOM</option>
+        <option value="TYBCOM">TYBCOM</option>
+        <option value="BMS">BMS</option>
+      </select>
+
+      <input type="number" name="contactNumber" />
     </form>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
