--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#4353ff" />
-    <meta
-      name="description"
-      property="og:description"
-      content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost."
-    />
-      <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
-  <meta name="image" property="og:image"
-    content="%PUBLIC_URL%/linkPreviewImage.png" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="stylesheet" href="styles.css">
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#4353ff" />
+  <meta name="description" property="og:description"
+    content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost." />
+  <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
+  <meta name="image" property="og:image" content="%PUBLIC_URL%/linkPreviewImage.png" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="styles.css">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap" rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-744KGS7S9N"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-744KGS7S9N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-      gtag('config', 'G-744KGS7S9N');
-    </script>
-    <!--
+    gtag('config', 'G-744KGS7S9N');
+  </script>
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -43,31 +40,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Apex Academy</title>
-  </head>
-  <body>
-<!-- A little help for the Netlify post-processing bots -->
+  <title>Apex Academy</title>
+</head>
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="firstName" />
-      <input type="text" name="lastName" />
-      <input type="email" name="email" />
-      <select name="courseSelection">
-        <option value="" disabled selected>Select your course</option>
-        <option value="FYJC">FYJC</option>
-        <option value="SYJC">SYJC</option>
-        <option value="FYBCOM">FYBCOM</option>
-        <option value="SYBCOM">SYBCOM</option>
-        <option value="TYBCOM">TYBCOM</option>
-        <option value="BMS">BMS</option>
-      </select>
+<body>
+  <!-- A little help for the Netlify post-processing bots -->
 
-      <input type="number" name="contactNumber" />
-    </form>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="firstName" />
+    <input type="text" name="lastName" />
+    <input type="email" name="email" />
+    <select name="courseSelection">
+      <option value="" disabled selected>Select your course</option>
+      <option value='School'>School Section</option>
+      <option value='SSC'>SSC</option>
+      <option value="FYJC">FYJC</option>
+      <option value="SYJC">SYJC</option>
+      <option value='BAF'>BAF</option>
+      <option value='BMS'>BMS</option>
+      <option value='BBI'>BBI</option>
+      <option value="BMS">BMS</option>
+    </select>
 
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+    <input type="number" name="contactNumber" />
+  </form>
+
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -77,6 +77,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
-  </body>
+
+</body>
+
 </html>
