--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Apex Academy</title>
+  <title>Apex Learning Academy</title>
 </head>
 
 <body>
