apex-learning-academy

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4353ff" />
   <meta name="description" property="og:description"
-    content="Apex Academy is a premier institution providing high-quality commerce education at an affordable cost." />
-  <meta name="keywords" content="Apex Academy, commerce education, affordable education, business education">
+    content="Apex Learning Academy is a premier institution providing high-quality commerce education at an affordable cost." />
+  <meta name="keywords" content="Apex Learning Academy, commerce education, affordable education, business education">
   <meta name="image" property="og:image" content="%PUBLIC_URL%/linkPreviewImage.png" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
