--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4353ff" />
   <meta name="description" property="og:description"
-    content="Apex Learning Academy is a premier institution providing high-quality commerce education at an affordable cost." />
+    content="Apex Learning Academy - Achieving Proficiency and EXcellence in Commerce Education." />
   <meta name="keywords" content="Apex Learning Academy, commerce education, affordable education, business education">
   <meta name="image" property="og:image" content="%PUBLIC_URL%/linkPreviewImage.png" />
 
